--- a/index.htm
+++ b/index.htm
@@ -39,14 +39,14 @@
         install = id('installLink');
         switch (engine) {
           case 'webkit':
-            install.href = "https://rawgit.com/WeetchKing/WeetchKing.github.io/master/VTWitcher/script/witcher.user.js"
+            install.href = "https://raw.githubusercontent.com/WeetchKing/WeetchKing.github.io/master/VTWitcher/script/witcher.user.js"
             //install.addEventListener('click', function(event) {event.preventDefault(); chrome.webstore.install();})
             break;
           case 'gecko':
-            install.href = "https://rawgit.com/WeetchKing/WeetchKing.github.io/master/VTWitcher/script/witcher.user.js"
+            install.href = "https://raw.githubusercontent.com/WeetchKing/WeetchKing.github.io/master/VTWitcher/script/witcher.user.js"
             break;
           case 'presto':
-            install.href = "https://rawgit.com/WeetchKing/WeetchKing.github.io/master/VTWitcher/script/witcher.user.js"
+            install.href = "https://raw.githubusercontent.com/WeetchKing/WeetchKing.github.io/master/VTWitcher/script/witcher.user.js"
             break;
           default:
             install.textContent = "Your browser is not supported."
